--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <meta name="og:title" content="Eudaimonia" />
-      <meta name="og:type" content="video.movie" />
-      <meta name="og:url" content="http://eudaimoniashortfilm.com/"/>
-      <meta name="og:image" content="img/1.png" />
-      <meta name="og:description" content="A story of womanhood, happiness and independent thinking."/>
+      <meta name="description" content="Watch the Film Here. A story of womanhood, happiness and independent thinking.">
+
+      <!-- Google / Search Engine Tags -->
+      <meta itemprop="name" content="Eudaimonia">
+      <meta itemprop="description" content="Watch the Film Here. A story of womanhood, happiness and independent thinking.">
+      <meta itemprop="image" content="img/1.png">
+
+      <!-- Facebook Meta Tags -->
+      <meta property="og:url" content="http://eudaimoniashortfilm.com">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Eudaimonia">
+      <meta property="og:description" content="Watch the Film Here. A story of womanhood, happiness and independent thinking.">
+      <meta property="og:image" content="img/1.png">
+
+      <!-- Twitter Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:title" content="Eudaimonia">
+      <meta name="twitter:description" content="Watch the Film Here. A story of womanhood, happiness and independent thinking.">
+      <meta name="twitter:image" content="img/1.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
